--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -30,7 +30,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 21/Apr<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/btetree.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.png]] [http://www.cpabien.tv/ Cpasbien]
 | [https://github.com/davy39/qbfrench davy39]
@@ -70,7 +70,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 22/July<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py Download]
-| Python2 & Python3<br />✖ Not Working
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/tux.png]] [http://linuxtracker.org/ Linux Tracker]
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic<br />And Wires]
@@ -78,7 +78,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 12/Apr<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]] [https://nyaa.pantsu.cat/ Nyaa.Pantsu]
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
@@ -86,7 +86,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 07/Aug<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]<br />[[https://github.com/Pireo/hello-world/blob/master/flag_japan.png]]
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/raw/master/nyaapantsu.png]] [https://nyaa.pantsu.cat/ Nyaa.Pantsu]
 | [https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/ kenken28]
@@ -94,7 +94,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 24/Jun<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]<br />[[https://github.com/Pireo/hello-world/blob/master/flag_japan.png]]
 | [https://raw.githubusercontent.com/kenken28/NyaaPantsu-qBittorrent-Plugin/master/nyaapantsu.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✖ qbt 4.0.x Not Working
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.png]] [https://nyaa.si/ Nyaa.si]
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic<br />And Wires]
@@ -102,7 +102,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 19/May<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]<br />[[https://github.com/Pireo/hello-world/blob/master/flag_japan.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py Download]
-| Python2 & Python3 <br />✔ qbt 3.3.15
+| Python2 & Python3 <br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.png]] [https://rarbg.to/ RARBG]
 | [https://github.com/b0nk/qbittorrent-search-plugins/ b0nk]
@@ -110,7 +110,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 28/July<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/rockbox.png]] [http://psychocydd.co.uk RockBox]
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
@@ -134,7 +134,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 20/May<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.py Download]
-| Python2 & Python3 <br />✔ qbt 3.3.15
+| Python2 & Python3 <br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.png]] [https://sukebei.nyaa.si/ Sukebei Nyaa]
 | [https://github.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/ phuongtail<br />tranminh]
@@ -142,7 +142,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 19/May<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]<br />[[https://github.com/Pireo/hello-world/blob/master/flag_japan.png]]
 | [https://raw.githubusercontent.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/master/nyaa.py Download]
-| Python2<br />(?) Not Tested
+| Python2 & Python 3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]] [https://sukebei.pantsu.cat/ Sukebei.Pantsu]
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
@@ -150,7 +150,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 07/Aug<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]<br />[[https://github.com/Pireo/hello-world/blob/master/flag_japan.png]]
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/sukebei.py Download]
-| Python2<br />(?) Not Tested
+| Python2 & Python 3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.png]] [http://www.sumotorrent.sx/ SumoTorrent]
 | [https://github.com/ngosang/qBittorrent-plugins ngosang]
@@ -158,7 +158,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 25/Sep<br />2015
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.py Download]
-| Python2 & Python3<br />✔ qbt 3.4.x
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.png]] [http://www.tntvillage.scambioetico.org/?releaselist TNT Village]
 | [https://github.com/ngosang/qBittorrent-plugins ngosang]
@@ -166,7 +166,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 17/Oct<br />2015
 | [[https://github.com/Pireo/hello-world/blob/master/it-IT.gif]]
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.py Download]
-| Python2 & Python3<br />✔ qbt 3.3.15
+| Python2 & Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.png]] [http://www.torrent9.cc/ Torrent9]
 | [https://github.com/davy39/qbfrench davy39]
@@ -182,7 +182,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | 7/Sept<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/ebukari/qbittorrent-plugins/master/torrentfunk.py Download]
-| Python2 & Python3<br />✔ qbt 3.4.x
+| Python2 & Python3<br />✖ qbt 4.0.x Not Working
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/favicons5.png]] [https://zooqle.com/ Zooqle]
 | [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin ArionMiles]
